UI Alignment issue

--- a/onboarding/src/main/webapp/resources/stylesheets/application.css
+++ b/onboarding/src/main/webapp/resources/stylesheets/application.css
@@ -17,7 +17,7 @@
 	border-right: #0039a6;
 	border-left: #0039a6;
 	background-color: #0039a6;
-	height :65%;
+	height :50%;
 }
 
 .header-homeicon {
